updated readme file