@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -35,7 +36,7 @@ public class VehicleTest {
         Package p1 = new Package("PKG01", 1, 1, "OFR001",100);
         Package p2 = new Package("PKG02", 11, 2, "OFR002",100);
 
-        Map<String, Float> deliveredPackages = vehicle.deliver(List.of(p1, p2));
+        Map<String, Float> deliveredPackages = vehicle.deliver(Arrays.asList(p1,p2));
 
         Assertions.assertEquals(2, deliveredPackages.size());
         Assertions.assertEquals(0.01f, deliveredPackages.get(p1.getId()));
