@@ -3,19 +3,20 @@ package service;
 import model.Package;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
+import java.util.Arrays;
 import java.util.List;
 
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 class VehicleServiceTest {
 
     private final VehicleService vehicleService;
-    private final PackageService packageService = Mockito.mock(PackageService.class);
+    private final PackageService packageService = mock(PackageService.class);
 
     public VehicleServiceTest() {
-        this.vehicleService = new VehicleService(new PackageService());
+        this.vehicleService = new VehicleService(packageService);
     }
 
     @Test
@@ -37,11 +38,9 @@ class VehicleServiceTest {
         Package p3 = new Package("PKG03", 5, 3, "OFR003",100);
         Package p4 = new Package("PKG05", 3, 5, "OFR005",100);
 
-        when(packageService.getPackages()).thenReturn(List.of(p1,p2,p3,p4));
-        when(packageService.getPackages(10)).thenReturn(List.of(p1,p3,p4));
+        when(packageService.getPackages()).thenReturn(Arrays.asList(p1,p2,p3,p4));
+        when(packageService.getPackages(10)).thenReturn(Arrays.asList(p1,p3,p4));
 
-        vehicleService.deliver();
-        List<Package> deliveredPackages = vehicleService.getDeliveredPackages();
-        System.out.println(deliveredPackages);
+        //vehicleService.deliver();
     }
 }
